; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_pcf50633-adc.c_trigger_next_adc_job_if_any.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_pcf50633-adc.c_trigger_next_adc_job_if_any.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcf50633 = type { i32 }
%struct.pcf50633_adc = type { i32, %struct.TYPE_2__** }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pcf50633*)* @trigger_next_adc_job_if_any to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @trigger_next_adc_job_if_any(%struct.pcf50633* %0) #0 {
  %2 = alloca %struct.pcf50633*, align 8
  %3 = alloca %struct.pcf50633_adc*, align 8
  %4 = alloca i32, align 4
  store %struct.pcf50633* %0, %struct.pcf50633** %2, align 8
  %5 = load %struct.pcf50633*, %struct.pcf50633** %2, align 8
  %6 = call %struct.pcf50633_adc* @__to_adc(%struct.pcf50633* %5)
  store %struct.pcf50633_adc* %6, %struct.pcf50633_adc** %3, align 8
  %7 = load %struct.pcf50633_adc*, %struct.pcf50633_adc** %3, align 8
  %8 = getelementptr inbounds %struct.pcf50633_adc, %struct.pcf50633_adc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* %4, align 4
  %10 = load %struct.pcf50633_adc*, %struct.pcf50633_adc** %3, align 8
  %11 = getelementptr inbounds %struct.pcf50633_adc, %struct.pcf50633_adc* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %12, i64 %14
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = icmp ne %struct.TYPE_2__* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  br label %40

19:                                               ; preds = %1
  %20 = load %struct.pcf50633*, %struct.pcf50633** %2, align 8
  %21 = load %struct.pcf50633_adc*, %struct.pcf50633_adc** %3, align 8
  %22 = getelementptr inbounds %struct.pcf50633_adc, %struct.pcf50633_adc* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %22, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %23, i64 %25
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.pcf50633_adc*, %struct.pcf50633_adc** %3, align 8
  %31 = getelementptr inbounds %struct.pcf50633_adc, %struct.pcf50633_adc* %30, i32 0, i32 1
  %32 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %31, align 8
  %33 = load i32, i32* %4, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %32, i64 %34
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @adc_setup(%struct.pcf50633* %20, i32 %29, i32 %38)
  br label %40

40:                                               ; preds = %19, %18
  ret void
}

declare dso_local %struct.pcf50633_adc* @__to_adc(%struct.pcf50633*) #1

declare dso_local i32 @adc_setup(%struct.pcf50633*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
